--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "react-dom": "^16.12.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
+    "react-tagcloud": "^2.0.0",
     "recompose": "^0.30.0"
   },
   "scripts": {
