--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
     "react-tagcloud": "^2.0.0",
-    "recompose": "^0.30.0"
+    "recompose": "^0.30.0",
+    "semantic-ui-react": "^0.88.2"
   },
   "scripts": {
     "start": "react-scripts start",
