--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "react-dom": "^16.12.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
-    "react-tagcloud": "^2.0.0",
+    "react-wordcloud": "^1.1.1",
     "recompose": "^0.30.0",
     "semantic-ui-react": "^0.88.2"
   },
